--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+
     }
 }
 rootProject.name = "ProjectSample"
 include ':app'
+include ':multitouchlistener'
